# flux

./: .gitignore  Makefile  README.md  compile.go  compiler.go  dependency.go  go.mod  go.sum  group_key.go  query.go  result.go  runtime.go  runtime_test.go  testStdin.flux
libflux/: Cargo.toml  analyze_test.go  bench_test.go  buildinfo.gen.go  parser_test.go
libflux/flux/: Cargo.toml  build.rs  docs.json
libflux/flux-core/: Cargo.toml
libflux/flux-core/src/: grammar.lalrpop  lib.rs
libflux/flux-core/src/ast/: mod.rs  tests.rs
libflux/flux-core/src/formatter/: mod.rs  tests.rs
libflux/flux-core/src/parser/: mod.rs  tests.rs
libflux/flux-core/src/scanner/: mod.rs
libflux/flux-core/src/semantic/: bootstrap.rs  convert.rs  fresh.rs  infer.rs  mod.rs  nodes.rs  tests.rs  types.rs
libflux/flux-core/tests/: analyze_test.rs
libflux/flux/src/: cffi.rs  lib.rs
libflux/flux/src/wasm/: mod.rs
libflux/go/libflux/: analyze.go  buildinfo.gen.go  flux.h  flux_src_lib.rs.h
libflux/include/influxdata/: flux.h
libflux/src/: bin.rs  lib.rs
libflux/src/ast/: mod.rs  tests.rs
libflux/src/ast/check/: mod.rs
libflux/src/ast/walk/: mod.rs  tests.rs
libflux/src/core/ast/: mod.rs  tests.rs
libflux/src/core/formatter/: mod.rs
libflux/src/core/parser/: mod.rs  tests.rs
libflux/src/core/semantic/: bootstrap.rs  builtins.rs  convert.rs  fresh.rs  nodes.rs  tests.rs  types.rs
libflux/src/flux/: lib.rs
libflux/src/libstd/: lib.rs
libflux/src/parser/: mod.rs  tests.rs
libflux/src/repl/: mod.rs
libflux/src/semantic/: analyze.rs  mod.rs  walk.rs
(+458 files in other folders)
