[workspace]
members = ["flux-core", "flux"]

# https://rustwasm.github.io/docs/book/reference/code-size.html#optimizing-builds-for-code-size
[profile.release]
lto = true
opt-level = 'z'

[profile.dev.build-override]
opt-level = 2

# [patch.crates-io]
# lalrpop = { path = "../../lalrpop/lalrpop", version = "0.19" }
